frontend/parser.output
Terminales no usados en la gramática

    IF_SIMPLE
    ELSE


Estado 20 conflictos: 2 desplazamiento/reducción
Estado 21 conflictos: 2 desplazamiento/reducción
Estado 39 conflictos: 2 desplazamiento/reducción
Estado 40 conflictos: 2 desplazamiento/reducción
Estado 41 conflictos: 14 desplazamiento/reducción
Estado 42 conflictos: 14 desplazamiento/reducción
Estado 43 conflictos: 2 desplazamiento/reducción
Estado 44 conflictos: 2 desplazamiento/reducción
Estado 45 conflictos: 2 desplazamiento/reducción
Estado 46 conflictos: 2 desplazamiento/reducción
Estado 47 conflictos: 2 desplazamiento/reducción
Estado 48 conflictos: 2 desplazamiento/reducción
Estado 49 conflictos: 2 desplazamiento/reducción
Estado 50 conflictos: 2 desplazamiento/reducción
Estado 51 conflictos: 2 desplazamiento/reducción
Estado 52 conflictos: 2 desplazamiento/reducción


Gramática

    0 $accept: start $end

    1 start: program

    2 program: block

    3 block: block instruction
    4      | instruction

    5 instruction: print

    6 print: PRINT '(' expression ')' ';'

    7 expression: INTEGER
    8           | DOUBLE
    9           | TRUE
   10           | FALSE
   11           | expression '+' expression
   12           | expression '-' expression
   13           | expression '*' expression
   14           | expression '/' expression
   15           | expression '%' expression
   16           | expression '^' expression
   17           | expression '<' expression
   18           | expression '>' expression
   19           | expression EQUAL expression
   20           | expression DIFFERENT expression
   21           | expression GREATEREQUAL expression
   22           | expression LESSEQUAL expression
   23           | '!' expression
   24           | expression AND expression
   25           | expression OR expression
   26           | '-' expression
   27           | '(' expression ')'
   28           | ID
   29           | STRING


Terminales con las reglas donde aparecen

    $end (0) 0
    '!' (33) 23
    '%' (37) 15
    '(' (40) 6 27
    ')' (41) 6 27
    '*' (42) 13
    '+' (43) 11
    '-' (45) 12 26
    '/' (47) 14
    ';' (59) 6
    '<' (60) 17
    '>' (62) 18
    '^' (94) 16
    error (256)
    LESSEQUAL (258) 22
    GREATEREQUAL (259) 21
    EQUAL (260) 19
    DIFFERENT (261) 20
    AND (262) 24
    OR (263) 25
    PRINT (264) 6
    TRUE <boolean_value> (265) 9
    FALSE <boolean_value> (266) 10
    INTEGER <int_value> (267) 7
    DOUBLE <double_value> (268) 8
    STRING <string_value> (269) 29
    ID <string_value> (270) 28
    minus (271)
    IF_SIMPLE (272)
    ELSE (273)


No terminales con las reglas donde aparecen

    $accept (31)
        on left: 0
    start (32)
        on left: 1
        on right: 0
    program <ast> (33)
        on left: 2
        on right: 1
    block <ast> (34)
        on left: 3 4
        on right: 2 3
    instruction <ast> (35)
        on left: 5
        on right: 3 4
    print <ast> (36)
        on left: 6
        on right: 5
    expression <ast> (37)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 6 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27


Estado 0

    0 $accept: • start $end

    PRINT  desplazar e ir al estado 1

    start        ir al estado 2
    program      ir al estado 3
    block        ir al estado 4
    instruction  ir al estado 5
    print        ir al estado 6


Estado 1

    6 print: PRINT • '(' expression ')' ';'

    '('  desplazar e ir al estado 7


Estado 2

    0 $accept: start • $end

    $end  desplazar e ir al estado 8


Estado 3

    1 start: program •

    $default  reduce usando la regla 1 (start)


Estado 4

    2 program: block •
    3 block: block • instruction

    PRINT  desplazar e ir al estado 1

    $default  reduce usando la regla 2 (program)

    instruction  ir al estado 9
    print        ir al estado 6


Estado 5

    4 block: instruction •

    $default  reduce usando la regla 4 (block)


Estado 6

    5 instruction: print •

    $default  reduce usando la regla 5 (instruction)


Estado 7

    6 print: PRINT '(' • expression ')' ';'

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 19


Estado 8

    0 $accept: start $end •

    $default  aceptar


Estado 9

    3 block: block instruction •

    $default  reduce usando la regla 3 (block)


Estado 10

    9 expression: TRUE •

    $default  reduce usando la regla 9 (expression)


Estado 11

   10 expression: FALSE •

    $default  reduce usando la regla 10 (expression)


Estado 12

    7 expression: INTEGER •

    $default  reduce usando la regla 7 (expression)


Estado 13

    8 expression: DOUBLE •

    $default  reduce usando la regla 8 (expression)


Estado 14

   29 expression: STRING •

    $default  reduce usando la regla 29 (expression)


Estado 15

   28 expression: ID •

    $default  reduce usando la regla 28 (expression)


Estado 16

   23 expression: '!' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 20


Estado 17

   26 expression: '-' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 21


Estado 18

   27 expression: '(' • expression ')'

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 22


Estado 19

    6 print: PRINT '(' expression • ')' ';'
   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression

    LESSEQUAL     desplazar e ir al estado 23
    GREATEREQUAL  desplazar e ir al estado 24
    EQUAL         desplazar e ir al estado 25
    DIFFERENT     desplazar e ir al estado 26
    AND           desplazar e ir al estado 27
    OR            desplazar e ir al estado 28
    '<'           desplazar e ir al estado 29
    '>'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '%'           desplazar e ir al estado 33
    '*'           desplazar e ir al estado 34
    '/'           desplazar e ir al estado 35
    '^'           desplazar e ir al estado 36
    ')'           desplazar e ir al estado 37


Estado 20

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   23           | '!' expression •
   24           | expression • AND expression
   25           | expression • OR expression

    LESSEQUAL     desplazar e ir al estado 23
    GREATEREQUAL  desplazar e ir al estado 24
    EQUAL         desplazar e ir al estado 25
    DIFFERENT     desplazar e ir al estado 26
    AND           desplazar e ir al estado 27
    OR            desplazar e ir al estado 28
    '<'           desplazar e ir al estado 29
    '>'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '%'           desplazar e ir al estado 33
    '*'           desplazar e ir al estado 34
    '/'           desplazar e ir al estado 35
    '^'           desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 23 (expression)]
    DIFFERENT  [reduce usando la regla 23 (expression)]
    $default   reduce usando la regla 23 (expression)


Estado 21

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression
   26           | '-' expression •

    EQUAL      desplazar e ir al estado 25
    DIFFERENT  desplazar e ir al estado 26

    EQUAL      [reduce usando la regla 26 (expression)]
    DIFFERENT  [reduce usando la regla 26 (expression)]
    $default   reduce usando la regla 26 (expression)


Estado 22

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression
   27           | '(' expression • ')'

    LESSEQUAL     desplazar e ir al estado 23
    GREATEREQUAL  desplazar e ir al estado 24
    EQUAL         desplazar e ir al estado 25
    DIFFERENT     desplazar e ir al estado 26
    AND           desplazar e ir al estado 27
    OR            desplazar e ir al estado 28
    '<'           desplazar e ir al estado 29
    '>'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '%'           desplazar e ir al estado 33
    '*'           desplazar e ir al estado 34
    '/'           desplazar e ir al estado 35
    '^'           desplazar e ir al estado 36
    ')'           desplazar e ir al estado 38


Estado 23

   22 expression: expression LESSEQUAL • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 39


Estado 24

   21 expression: expression GREATEREQUAL • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 40


Estado 25

   19 expression: expression EQUAL • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 41


Estado 26

   20 expression: expression DIFFERENT • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 42


Estado 27

   24 expression: expression AND • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 43


Estado 28

   25 expression: expression OR • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 44


Estado 29

   17 expression: expression '<' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 45


Estado 30

   18 expression: expression '>' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 46


Estado 31

   11 expression: expression '+' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 47


Estado 32

   12 expression: expression '-' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 48


Estado 33

   15 expression: expression '%' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 49


Estado 34

   13 expression: expression '*' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 50


Estado 35

   14 expression: expression '/' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 51


Estado 36

   16 expression: expression '^' • expression

    TRUE     desplazar e ir al estado 10
    FALSE    desplazar e ir al estado 11
    INTEGER  desplazar e ir al estado 12
    DOUBLE   desplazar e ir al estado 13
    STRING   desplazar e ir al estado 14
    ID       desplazar e ir al estado 15
    '!'      desplazar e ir al estado 16
    '-'      desplazar e ir al estado 17
    '('      desplazar e ir al estado 18

    expression  ir al estado 52


Estado 37

    6 print: PRINT '(' expression ')' • ';'

    ';'  desplazar e ir al estado 53


Estado 38

   27 expression: '(' expression ')' •

    $default  reduce usando la regla 27 (expression)


Estado 39

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   22           | expression LESSEQUAL expression •
   24           | expression • AND expression
   25           | expression • OR expression

    EQUAL      desplazar e ir al estado 25
    DIFFERENT  desplazar e ir al estado 26
    '+'        desplazar e ir al estado 31
    '-'        desplazar e ir al estado 32
    '%'        desplazar e ir al estado 33
    '*'        desplazar e ir al estado 34
    '/'        desplazar e ir al estado 35
    '^'        desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 22 (expression)]
    DIFFERENT  [reduce usando la regla 22 (expression)]
    $default   reduce usando la regla 22 (expression)


Estado 40

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   21           | expression GREATEREQUAL expression •
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression

    EQUAL      desplazar e ir al estado 25
    DIFFERENT  desplazar e ir al estado 26
    '+'        desplazar e ir al estado 31
    '-'        desplazar e ir al estado 32
    '%'        desplazar e ir al estado 33
    '*'        desplazar e ir al estado 34
    '/'        desplazar e ir al estado 35
    '^'        desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 21 (expression)]
    DIFFERENT  [reduce usando la regla 21 (expression)]
    $default   reduce usando la regla 21 (expression)


Estado 41

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   19           | expression EQUAL expression •
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression

    LESSEQUAL     desplazar e ir al estado 23
    GREATEREQUAL  desplazar e ir al estado 24
    EQUAL         desplazar e ir al estado 25
    DIFFERENT     desplazar e ir al estado 26
    AND           desplazar e ir al estado 27
    OR            desplazar e ir al estado 28
    '<'           desplazar e ir al estado 29
    '>'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '%'           desplazar e ir al estado 33
    '*'           desplazar e ir al estado 34
    '/'           desplazar e ir al estado 35
    '^'           desplazar e ir al estado 36

    LESSEQUAL     [reduce usando la regla 19 (expression)]
    GREATEREQUAL  [reduce usando la regla 19 (expression)]
    EQUAL         [reduce usando la regla 19 (expression)]
    DIFFERENT     [reduce usando la regla 19 (expression)]
    AND           [reduce usando la regla 19 (expression)]
    OR            [reduce usando la regla 19 (expression)]
    '<'           [reduce usando la regla 19 (expression)]
    '>'           [reduce usando la regla 19 (expression)]
    '+'           [reduce usando la regla 19 (expression)]
    '-'           [reduce usando la regla 19 (expression)]
    '%'           [reduce usando la regla 19 (expression)]
    '*'           [reduce usando la regla 19 (expression)]
    '/'           [reduce usando la regla 19 (expression)]
    '^'           [reduce usando la regla 19 (expression)]
    $default      reduce usando la regla 19 (expression)


Estado 42

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   20           | expression DIFFERENT expression •
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression

    LESSEQUAL     desplazar e ir al estado 23
    GREATEREQUAL  desplazar e ir al estado 24
    EQUAL         desplazar e ir al estado 25
    DIFFERENT     desplazar e ir al estado 26
    AND           desplazar e ir al estado 27
    OR            desplazar e ir al estado 28
    '<'           desplazar e ir al estado 29
    '>'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '%'           desplazar e ir al estado 33
    '*'           desplazar e ir al estado 34
    '/'           desplazar e ir al estado 35
    '^'           desplazar e ir al estado 36

    LESSEQUAL     [reduce usando la regla 20 (expression)]
    GREATEREQUAL  [reduce usando la regla 20 (expression)]
    EQUAL         [reduce usando la regla 20 (expression)]
    DIFFERENT     [reduce usando la regla 20 (expression)]
    AND           [reduce usando la regla 20 (expression)]
    OR            [reduce usando la regla 20 (expression)]
    '<'           [reduce usando la regla 20 (expression)]
    '>'           [reduce usando la regla 20 (expression)]
    '+'           [reduce usando la regla 20 (expression)]
    '-'           [reduce usando la regla 20 (expression)]
    '%'           [reduce usando la regla 20 (expression)]
    '*'           [reduce usando la regla 20 (expression)]
    '/'           [reduce usando la regla 20 (expression)]
    '^'           [reduce usando la regla 20 (expression)]
    $default      reduce usando la regla 20 (expression)


Estado 43

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   24           | expression AND expression •
   25           | expression • OR expression

    LESSEQUAL     desplazar e ir al estado 23
    GREATEREQUAL  desplazar e ir al estado 24
    EQUAL         desplazar e ir al estado 25
    DIFFERENT     desplazar e ir al estado 26
    '<'           desplazar e ir al estado 29
    '>'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '%'           desplazar e ir al estado 33
    '*'           desplazar e ir al estado 34
    '/'           desplazar e ir al estado 35
    '^'           desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 24 (expression)]
    DIFFERENT  [reduce usando la regla 24 (expression)]
    $default   reduce usando la regla 24 (expression)


Estado 44

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression
   25           | expression OR expression •

    LESSEQUAL     desplazar e ir al estado 23
    GREATEREQUAL  desplazar e ir al estado 24
    EQUAL         desplazar e ir al estado 25
    DIFFERENT     desplazar e ir al estado 26
    '<'           desplazar e ir al estado 29
    '>'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '%'           desplazar e ir al estado 33
    '*'           desplazar e ir al estado 34
    '/'           desplazar e ir al estado 35
    '^'           desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 25 (expression)]
    DIFFERENT  [reduce usando la regla 25 (expression)]
    $default   reduce usando la regla 25 (expression)


Estado 45

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   17           | expression '<' expression •
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression

    EQUAL      desplazar e ir al estado 25
    DIFFERENT  desplazar e ir al estado 26
    '+'        desplazar e ir al estado 31
    '-'        desplazar e ir al estado 32
    '%'        desplazar e ir al estado 33
    '*'        desplazar e ir al estado 34
    '/'        desplazar e ir al estado 35
    '^'        desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 17 (expression)]
    DIFFERENT  [reduce usando la regla 17 (expression)]
    $default   reduce usando la regla 17 (expression)


Estado 46

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   18           | expression '>' expression •
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression

    EQUAL      desplazar e ir al estado 25
    DIFFERENT  desplazar e ir al estado 26
    '+'        desplazar e ir al estado 31
    '-'        desplazar e ir al estado 32
    '%'        desplazar e ir al estado 33
    '*'        desplazar e ir al estado 34
    '/'        desplazar e ir al estado 35
    '^'        desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 18 (expression)]
    DIFFERENT  [reduce usando la regla 18 (expression)]
    $default   reduce usando la regla 18 (expression)


Estado 47

   11 expression: expression • '+' expression
   11           | expression '+' expression •
   12           | expression • '-' expression
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression

    EQUAL      desplazar e ir al estado 25
    DIFFERENT  desplazar e ir al estado 26
    '%'        desplazar e ir al estado 33
    '*'        desplazar e ir al estado 34
    '/'        desplazar e ir al estado 35
    '^'        desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 11 (expression)]
    DIFFERENT  [reduce usando la regla 11 (expression)]
    $default   reduce usando la regla 11 (expression)


Estado 48

   11 expression: expression • '+' expression
   12           | expression • '-' expression
   12           | expression '-' expression •
   13           | expression • '*' expression
   14           | expression • '/' expression
   15           | expression • '%' expression
   16           | expression • '^' expression
   17           | expression • '<' expression
   18           | expression • '>' expression
   19           | expression • EQUAL expression
   20           | expression • DIFFERENT expression
   21           | expression • GREATEREQUAL expression
   22           | expression • LESSEQUAL expression
   24           | expression • AND expression
   25           | expression • OR expression

    EQUAL      desplazar e ir al estado 25
    DIFFERENT  desplazar e ir al estado 26
    '%'        desplazar e ir al estado 33
    '*'        desplazar e ir al estado 34
    '/'        desplazar e ir al estado 35
    '^'        desplazar e ir al estado 36

    EQUAL      [reduce usando la regla 12 (expression)]
    DIFFERENT  [reduce usando la regla 12 (expression)]
    $default   reduce usando la regla 12 (expression)


Estado 49
